@@ -759,8 +759,13 @@ ut-bin)
 <p>Make sure you are using XQF 0.9.5a-beta or later
 <p>Under Preferences - Games, enter ut for 'command line' and enter the
 directory UnrealTournament is installed in for 'working directory'.</blockquote>
-<b>Half-Life (untested):</b>
-<blockquote>When connecting to a Half-Life server, XQF will pass the following
+<b>Half-Life:</b>
+<blockquote>
+Nothing special required anymore, just enter a command that launches a normal
+Half-Life.
+</blockquote>
+<!--
+When connecting to a Half-Life server, XQF will pass the following
 on the command line after the command specified in Preferences - Games
 'command line': +set cd_nocd (0 or 1) +set game (gamename) +connect ipaddress:port
 <p>Depending on how you launch HalfLife using Wine (<a href="http://www.transgaming.com/">TransGaming</a>,
@@ -777,7 +782,8 @@ pass the 8th command line option which would be the ipaddress and port
 enter the directory where the script is located for 'working directory'.
 <p>The <a href="http://lhl.linuxgames.com">Linux Half-Life</a> site contains
 a <a href="http://lhl.linuxgames.com/hl">script</a> in the <a href="http://lhl.linuxgames.com/howto.shtml">How-To</a>
-section that can be easily modified to suite your configuration.</blockquote>
+section that can be easily modified to suite your configuration.
+-->
 <b>Descent 3:</b>
 <blockquote>Descent 3 does not currently launch from XQF.&nbsp; This appears
 to be a problem with the Descent3 program, and not XQF.&nbsp; Descent3
